--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,7 +3,7 @@ spring.application.name=epicode
 
 spring.datasource.url=jdbc:postgresql://localhost:5432/epicodeDB2
 spring.datasource.username=postgres
-spring.datasource.password=
+spring.datasource.password=${postgresql.password}
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
